--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,6 @@ body {
   @apply bg-[#FD5D69] w-screen h-screen flex flex-col text-white justify-center items-center 
 }
 
+.container {
+  @apply flex justify-center;
+}
